--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "migrate:dev": "knex migrate:latest --env development",
     "migrate:prod": "knex migrate:latest -- env production"
   },
